# libconfig

./: CMakeLists.txt  flake.nix
examples/c++/: CMakeLists.txt
lib/: CMakeLists.txt
